service-pets.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-pets
  namespace: assignment
  labels:
    name: service-pets
    namespace: assignment
spec:
  clusterIP: None
  ports:
    - name: dev
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    name: pets
    namespace: assignment
